<resources>
    <string name="app_name">Flash SportApp</string>
    <string name="kosong">Kosong</string>
    <string name="shots">Pemain</string>
    <string name="goaler">Pencetak goal</string>
    <string name="goalkeeper">Penjaga Gawang</string>
    <string name="defense">Pertahanan</string>
    <string name="midfield">Bagian Tengah</string>
    <string name="forward">Penyerang</string>
    <string name="substitutes">Pengganti</string>
    <string name="home_badge">home_badge</string>
    <string name="away_badge">away_badge</string>
    <string name="score">score</string>
    <string name="teama">teamA</string>
    <string name="teamb">teamB</string>
    <string name="date">date</string>
    <string name="favorite">Favorite</string>
    <string name="fav_matches">Favorite Matches</string>
    <string name="hapus_match">Hapus pertandingan dari list</string>
    <string name="remove_match_error">Tidak bisa menghapus pertandingan ini dari list favorit</string>
    <string name="error_add_match">Tidak bisa di favoritkan!</string>
    <string name="add_match">Tertambah ke favorit!</string>
    <string name="alert_loading">Tunggu, dan coba lagi!</string>
    <string name="fav">Favorite</string>
    <string name="vs">VS</string>
    <string name="match">Match</string>
    <string name="teams_title">Teams</string>
    <string name="favorites">Favorites</string>
    <string name="nama_team">Nama Team</string>
    <string name="team_image">Team_Image</string>
    <string name="nama_player">Nama PLayer</string>
    <string name="role_player">Role player</string>
    <string name="team_detail">Team Detail</string>
    <string name="remove_fav">Removed from favorite</string>
    <string name="cant_remove">Can\'t remove from favorite, coz</string>
    <string name="title_size">20sp</string>
    <string name="example">nama team</string>
    <string name="deskripsifotoplayer">deskripsiFotoPlayer</string>
    <string name="berat">berat</string>
    <string name="berat_badan">Berat Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="title_player_activity">Player Detail</string>
    <string name="favs">Favorites</string>
    <string name="mt_sc">Match Schedule</string>
    <string name="teams">Teams</string>

    <string name="match_english_pemier_league">4328</string>
    <string name="match_english_league_championship">4329</string>
    <string name="match_german_bundes_liga">4331</string>
    <string name="match_italian_serie_A">4332</string>
    <string name="match_french_ligue_1">4334</string>
    <string name="match_spanish_la_liga">4335</string>

    <string name="english_pemier_league">English Premier League</string>
    <string name="english_league_championship">English League Championship</string>
    <string name="german_bundes_liga">German Bundesliga</string>
    <string name="italian_serie_A">Italian Serie A</string>
    <string name="french_ligue_1">French Ligue 1</string>
    <string name="spanish_la_liga">Spanish La Liga</string>
    <string name="search_match_hint">Search Match</string>
    <string name="search_team_hint">Search teams</string>
    <string name="title_match">Match Detail</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
    </array>
</resources>
