<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
        <ImageView
                android:id="@+id/img_player"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/team_image"/>
        <TextView
                android:id="@+id/name_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:text="@string/nama_player"/>
        <TextView
                android:maxLines="1"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:text="@string/role_player"
                android:id="@+id/role_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>


</android.support.v7.widget.CardView>