<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ProgressBar
                android:id="@+id/progress_detail"
                android:visibility="gone"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/ll_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                tools:context=".view.myActivity.PastMatchActivity">

            <TextView
                    android:id="@+id/match_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                <ImageView
                        android:id="@+id/img_home"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="3"
                        android:contentDescription="@string/home_badge"
                        android:maxHeight="115dp"
                        android:maxWidth="115dp"/>

                <TextView
                        android:layout_width="80dp"
                        android:layout_height="120dp"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/vs"/>

                <ImageView
                        android:id="@+id/img_away"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_weight="3"
                        android:contentDescription="@string/away_badge"
                        android:maxHeight="115dp"
                        android:maxWidth="115dp"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FF0000FF"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                <TextView
                        android:id="@+id/home_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="14dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp">

                <TextView
                        android:id="@+id/home_score_match"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_score_match"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#FF0000FF"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_shots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/shots"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_shot"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_goals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/goaler"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_goals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_goalkeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/goalkeeper"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_goalkeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_defense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/defense"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_defense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_midfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/midfield"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_midfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_forward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/forward"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_forward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#616161"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp">

                <TextView
                        android:id="@+id/home_substitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="start"/>

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/substitutes"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                <TextView
                        android:id="@+id/away_substitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"/>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>